Add feedback functionality
